// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader > renders <MPageHeader title="titre"></MPageHeader> correctly 1`] = `
"<div class="relative border-b border-(--color-border-primary) py-8">
  <!--v-if-->
  <div class="flex flex-col items-start gap-6 lg:flex-row">
    <!--v-if-->
    <div class="flex-1">
      <div>
        <h1 class="text-4xl font-bold mb-8 scroll-mt-[var(--ui-header-height)]">titre</h1>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`PageHeader > renders all props correctly 1`] = `
"<div class="relative border-b border-(--color-border-primary) py-8">
  <div>healine</div>
  <div class="flex flex-col items-start gap-6 lg:flex-row">
    <div><span class="text-primary size-10 flex-shrink-0">heroicons-check</span></div>
    <div class="flex-1">
      <div>
        <h1 class="text-4xl font-bold mb-8 scroll-mt-[var(--ui-header-height)]">Title</h1>
      </div>
      <p>descr</p>
    </div>
  </div>
</div>"
`;

exports[`PageHeader > renders base case correctly 1`] = `
"<div class="relative border-b border-(--color-border-primary) py-8">
  <!--v-if-->
  <div class="flex flex-col items-start gap-6 lg:flex-row">
    <!--v-if-->
    <div class="flex-1">
      <div>
        <h1 class="text-4xl font-bold mb-8 scroll-mt-[var(--ui-header-height)]"></h1>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;
